[metadata]
name = sgbikecrawler
version = 0.0.1
license = MIT
description = A crawler to compare bike prices across different Singapore websites
long_description = file: README.rst
author = Sebastian Rodriguez

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src